ocp-multicluster-kustomize-lab-sample-demo/ocpcluster3/overlays/db/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowed-ingress-network-policy
spec:
  podSelector:
    matchLabels:
      role: mongodb
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: concession-kiosk-app
    - podSelector:
        matchLabels:
          deployment: backend
    ports:
    - protocol: TCP
      port: 27017
